// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImageBackgroundWithFallback should render 1`] = `
<View
  style={
    Object {
      "height": 50,
      "width": 50,
    }
  }
>
  <View
    accessibilityLabel="image-background-container"
    accessible={true}
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
    testID="image-background-container"
  >
    <View
      style={
        Array [
          Object {
            "overflow": "hidden",
          },
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            Object {
              "height": "100%",
              "width": "100%",
            },
            undefined,
          ],
        ]
      }
    >
      <FastImageView
        accessibilityLabel="image-background-image"
        accessible={true}
        onFastImageError={[Function]}
        onFastImageLoadEnd={[Function]}
        onFastImageLoadStart={[Function]}
        resizeMode="cover"
        source={
          Object {
            "uri": "uri",
          }
        }
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
        testID="image-background-image"
      />
    </View>
  </View>
</View>
`;

exports[`ImageBackgroundWithFallback should render with fallback 1`] = `
<View
  style={
    Object {
      "height": 50,
      "width": 50,
    }
  }
>
  <View
    accessibilityLabel="image-background-container"
    accessible={true}
    style={
      Object {
        "width": "100%",
      }
    }
    testID="image-background-container"
  >
    <View
      style={
        Array [
          Object {
            "overflow": "hidden",
          },
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            Object {
              "height": undefined,
              "width": "100%",
            },
            undefined,
          ],
        ]
      }
    >
      <FastImageView
        accessibilityLabel="image-background-image"
        accessible={true}
        onFastImageError={[Function]}
        onFastImageLoadEnd={[Function]}
        onFastImageLoadStart={[Function]}
        resizeMode="cover"
        source={
          Object {
            "uri": "fallback",
          }
        }
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
        testID="image-background-image"
      />
    </View>
  </View>
</View>
`;
